UCF-APR2.4/ftr main/force-app/main/default/objects/UNI__c/fields/Negotiation__c.field-meta.xml
<CustomField>
    <fullName>Negotiation__c</fullName>
    <label>Negotiation (Port Speed)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Auto</fullName>
                <default>true</default>
                <label>Auto</label>
            </value>
            <value>
                <fullName>No-Negotiate</fullName>
            </value>
            <value>
                <fullName>100M Auto</fullName>
                <isActive>false</isActive>
                <label>100M Auto</label>
            </value>
            <value>
                <fullName>100M No Auto</fullName>
                <isActive>false</isActive>
                <label>100M No Auto</label>
            </value>
            <value>
                <fullName>10G Auto</fullName>
                <isActive>false</isActive>
                <label>10G Auto</label>
            </value>
            <value>
                <fullName>10G No Auto</fullName>
                <isActive>false</isActive>
                <label>10G No Auto</label>
            </value>
            <value>
                <fullName>1G Auto</fullName>
                <isActive>false</isActive>
                <label>1G Auto</label>
            </value>
            <value>
                <fullName>1G No Auto</fullName>
                <isActive>false</isActive>
                <label>1G No Auto</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>