UCF-APR2.4/ftr main/force-app/main/default/objects/UNI__c/fields/Speed__c.field-meta.xml
<CustomField>
    <fullName>Speed__c</fullName>
    <label>Speed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1000</fullName>
                <default>true</default>
                <label>1G</label>
            </value>
            <value>
                <fullName>10000</fullName>
                <label>10G</label>
            </value>
            <value>
                <fullName>100G</fullName>
            </value>
            <value>
                <fullName>100</fullName>
                <label>100M</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>