UCF-APR2.4/ftr main/force-app/main/default/objects/UNI__c/fields/Speed_Value__c.field-meta.xml
<CustomField >
    <fullName>Speed_Value__c</fullName>
    <description>keeping dummy values</description>
    <formula>VALUE( TEXT( 100000 ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Speed Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>